<resources>
    <string name="app_name">Sunrise Widget</string>
    <string name="action_settings">Settings</string>
    <string name="appwidget_sunrise_text">00:00</string>
    <string name="appwidget_sunset_text">00:00</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_settings">Settings</string>


    <string name="pref_header_general">General</string>

    <string name="pref_latitude">Latitude</string>
    <string name="pref_latitude_default">48.14</string>
    <string name="pref_longitude">Longitude</string>
    <string name="pref_longitude_default">11.6</string>
</resources>
