<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_header_general"
        android:key="pref_category_general">
        <!-- NOTE: EditTextPreference accepts EditText attributes. -->
        <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
        <EditTextPreference
            android:key="pref_latitude"
            android:title="@string/pref_latitude"
            android:defaultValue="@string/pref_latitude_default"
            android:selectAllOnFocus="true"
            android:inputType="numberDecimal"
            android:capitalize="words"
            android:singleLine="true"
            android:maxLines="1"
            />

        <EditTextPreference
            android:key="pref_longitude"
            android:title="@string/pref_longitude"
            android:defaultValue="@string/pref_longitude_default"
            android:selectAllOnFocus="true"
            android:inputType="numberDecimal"
            android:capitalize="words"
            android:singleLine="true"
            android:maxLines="1" />
    </PreferenceCategory>

</PreferenceScreen>
